--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -9,8 +9,7 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ],
-      "@common/*": ["../backend/src/common/*"]
+      ]
     },
     "resolveJsonModule": true,
     "types": ["vite/client"],
@@ -26,6 +25,6 @@
     "preserveWatchOutput": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "../backend/src/common/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "exclude": ["dist", "node_modules"]
 }
