refactor: implement caching mechanism for video metadata and ensure cache directory exists

--- a/compose.yml
+++ b/compose.yml
@@ -12,6 +12,7 @@ services:
       - .env
     volumes:
       - ./shows:/prod/backend/shows:ro
+      - ./cache:/prod/backend/cache
 
   frontend:
     build:
