--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,10 @@ services:
     volumes:
       - ./shows:/prod/backend/shows:ro
       - ./cache:/prod/backend/cache
+    devices:
+      - /dev/dri:/dev/dri  # GPU device for hardware acceleration (VAAPI)
+    group_add:
+      - video  # Add container to video group for GPU access
 
   frontend:
     build:
